[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "mallows"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "uv>=0.5.13",
    "numpy>=2.2.1",
    "preflibtools>=2.0.32",
]
[tool.maturin]
features = ["pyo3/extension-module"]

[tool.rye]
dev-dependencies = [
    "maturin>=1.8.1",
]
